Adjust CSS spacing for issue #197

--- a/skin/aqua/kona3.css
+++ b/skin/aqua/kona3.css
@@ -77,7 +77,7 @@ body {
   border-left: 5px solid #00bcd4;
   background: linear-gradient(to right, #f1fbfd 0%, transparent 100%);
   color: #00838f;
-  font-size: 1.3em;
+  font-size: 1.2em;
   font-weight: 700;
   margin: 1.8em 0 1em;
   padding: 0.6em 0.8em;
